fixed overlap

--- a/main1.css
+++ b/main1.css
@@ -188,7 +188,7 @@ transition: .3s;
 }
 .img1 img {
 position: absolute;
-padding-left: 30%;
+padding-left: 50%;
 width: 45%;
 
 z-index: -2;
@@ -221,7 +221,7 @@ padding-right: 10%
   border-bottom-color: white;
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  
+
 }
 .img2 img {
   width: auto;
